# MutiExpert

./: .env.example  .gitignore  AI-ASSISTANT-FLOW.md  CLAUDE.md  FRONTEND_REDESIGN_PROMPT.md  SKILLS_TEST_REPORT.md  SKILLS_TEST_SUCCESS.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  test_skills.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: boards.py  bot_tools.py  calendar.py  chat.py  dashboard.py  data_management.py  documents.py  external_services.py  feishu.py  industries.py  knowledge_bases.py  network.py  router.py  sandbox.py  scheduled_tasks.py  scripts.py  site_settings.py  skills.py  system.py  todos.py
backend/app/core/: chunking.py
backend/app/models/: board.py  extras.py  knowledge.py  network.py
backend/app/schemas/: ai_models.py  board.py  chat.py  industry.py  knowledge_base.py
backend/app/services/: ai_model_config.py  ai_service.py  document_parser.py  document_pipeline.py  embedding_service.py  feishu_service.py  feishu_ws.py  image_hosting_service.py  insight_generator.py  network_scanner.py  pipeline_service.py  rag_service.py  sandbox_service.py  scheduler_service.py  script_env_resolver.py  script_executor.py  skill_executor.py  supabase_storage_service.py  system_prompt_service.py  url_fetcher.py  vector_store.py  web_search_service.py
backend/app/services/intent/: __init__.py  executor.py  router.py  seed.py  tools.py
docs/: DEPLOYMENT.md  FRONTEND_EXPERT_GUIDE.md  SERVER_ENV.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
migrations/: 001_initial_schema.sql  002_todos_and_site_settings.sql  003_boards.sql  004_ai_memory_feishu_scheduler.sql  005_chat_features.sql  006_feishu_bot_scripts.sql  007_user_scripts_parameters.sql
nginx/: nginx.conf
(+141 files in other folders)
