[project]
name = "mutiexpert-backend"
version = "0.1.0"
description = "MutiExpert - Multi-industry Knowledge Asset Management Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-multipart>=0.0.12",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "markdown>=3.7",
    "lark-oapi>=1.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "sse-starlette>=2.0.0",
    "pgvector>=0.3.0",
    "croniter>=2.0.5",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
